--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,7 +1,7 @@
 # vim:ft=kitty
 
 #: Fonts
-font_family      Fira Code Regular
+font_family      FiraCode Nerd Font Reg
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
