--- a/waybar/config
+++ b/waybar/config
@@ -34,7 +34,7 @@
 		"on-click": "activate",
 		"format": "{icon}",
 		"format-icons": {
-			"default": "",
+			"default": "",
 			"1": "1",
 			"2": "2",
 			"3": "3",
