--- a/sway/config
+++ b/sway/config
@@ -14,7 +14,7 @@ set {
 	$private-browser firefox --private-window
 }
 
-# for_window [class=".*"] border pixel 0
+for_window [class="discord"] move container to workspace 9
 default_border none
 default_floating_border none
 gaps outer 5
