--- a/waybar/config
+++ b/waybar/config
@@ -43,9 +43,8 @@
 			"6": "6",
 			"7": "7",
 			"8": "8",
-			"9": "9",
-			"active": "󱓻",
-			"urgent": "󱓻"
+			"9": "",
+			"urgent": "",
 		},
 		"persistent-workspaces": {
 			"1": [],
