--- a/sway/config
+++ b/sway/config
@@ -31,9 +31,9 @@ bar {
 output * bg ~/.config/sway/wallpaper/beautiful-mountains-landscape.jpg fill
 
 exec swayidle -w \
-	timeout 300 'swaylock -f -c 000000' \
-	timeout 600 'swaymsg "output * power off"' resume 'swaymsg "output * power on"' \
-	before-sleep 'swaylock -f -c 000000'
+	timeout 120 'swaylock -C ~/.config/dotfiles/sway/swaylock -f --grace 10 --fade-in 4 --screenshot' \
+	timeout 240 'swaymsg "output * power off"' resume 'swaymsg "output * power on"' \
+	before-sleep 'swaylock -C ~/.config/dotfiles/sway/swaylock'
 
 input {
 	type:touchpad {
