--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -12,6 +12,7 @@ disable_ligatures cursor
 
 #: Window layout
 background_opacity 0.9
+hide_window_decorations yes
 
 #: Window management
 map kitty_mod+enter new_window_with_cwd
