--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -2,6 +2,7 @@
 
 #: Fonts
 font_family      FiraCode Nerd Font Reg
+font_size        8.0
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
@@ -11,7 +12,7 @@ bold_italic_font auto
 disable_ligatures cursor
 
 #: Window layout
-background_opacity 0.9
+background_opacity      0.9
 hide_window_decorations yes
 
 #: Window management
@@ -23,23 +24,23 @@ map cmd+enter       new_window_with_cwd
 ## author: Folke Lemaitre
 ## upstream: https://github.com/folke/tokyonight.nvim/raw/main/extras/kitty/tokyonight_night.conf
 
-background #1a1b26
-foreground #c0caf5
+background           #1a1b26
+foreground           #c0caf5
 selection_background #283457
 selection_foreground #c0caf5
-url_color #73daca
-cursor #c0caf5
-cursor_text_color #1a1b26
+url_color            #73daca
+cursor               #c0caf5
+cursor_text_color    #1a1b26
 
 # Tabs
-active_tab_background #7aa2f7
-active_tab_foreground #16161e
+active_tab_background   #7aa2f7
+active_tab_foreground   #16161e
 inactive_tab_background #292e42
 inactive_tab_foreground #545c7e
 #tab_bar_background #15161e
 
 # Windows
-active_border_color #7aa2f7
+active_border_color   #7aa2f7
 inactive_border_color #292e42
 
 # normal
